fix overflow

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -6,7 +6,7 @@
 
 @layer base {
 	body {
-		overflow: scroll;
+		overflow-y: scroll;
 	}
 }
 
